@@ -18,6 +18,7 @@ Version 1.0.1
 - Prevent title music audio from starting in a random place.
 - Update harpoon speed on room change.
 - Enable second sky layer rendering.
+- Preserve inventory and flare on level jumps.
 - Timer.Create now lets you choose the units to display remaining time.
 - Fatal script errors now boot you to the title (it will crash if the title itself has these errors).
 - SetFarView has been removed, and Flow.Level.farView is now uncapped.
